feat: enforce unique menu item names within the same restaurant